# qbx-ds-paper-experiments

./: .gitignore  Dockerfile  Makefile  README.rst  conda-packages.json  conda-packages.txt  conda.yml  install.sh  pyproject.toml  requirements.txt
experiments/: Makefile  common_ds_tools.py  default.mplstyle  ds-backward-accuracy.py  ds-backward-convergence.py  ds-backward-dof-scaling.py  ds-farfield-model.py  ds-forward-accuracy-weights.py  ds-forward-accuracy.py  ds-forward-model.py  ds-geometry.py  ds-run.py  ds-visualize.py
scripts/: install-micromamba.sh  pin-conda-environment.py
